infrastructure/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  labels:
    app: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - notifier.jacobmartins.com
    secretName: tls-secret
  rules:
  - host: notifier.jacobmartins.com
    http:
      paths:
      - backend:
          serviceName: my-nginx
          servicePort: 80
        path: /
